objects/Portal_Login__c/Portal_Login__c.object-meta.xml
<CustomObject>
    <label>Portal Login</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Portal Logins</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>