objects/Portal_Login__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Portal Logins</relationshipLabel>
    <relationshipName>Portal_Logins</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>