objects/Portal_Login__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Portal Logins</relationshipLabel>
    <relationshipName>Portal_Logins</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>