objects/Portal_Login__c/fields/Last_Login_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Login_Date__c</fullName>
    <label>Last Login Date</label>
    <type>DateTime</type>
</CustomField>