objects/Portal_Login__c/fields/Login_Credential_Sent__c.field-meta.xml
<CustomField>
    <fullName>Login_Credential_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Login Credential Sent</label>
    <type>Checkbox</type>
</CustomField>