objects/Portal_Login__c/fields/Login_Credential_Sent_Date__c.field-meta.xml
<CustomField>
    <fullName>Login_Credential_Sent_Date__c</fullName>
    <label>Login Credential Sent Date</label>
    <type>DateTime</type>
</CustomField>