objects/Portal_Login__c/fields/Number_of_Accounts__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Accounts__c</fullName>
    <label>Number of Accounts</label>
    <summaryForeignKey>Staging_Account_Login_Activity__c.Portal_Login__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>