objects/Portal_Login__c/fields/Session_Expires__c.field-meta.xml
<CustomField>
    <fullName>Session_Expires__c</fullName>
    <label>Session Expires</label>
    <type>DateTime</type>
</CustomField>