objects/Portal_Login__c/fields/Session_Token__c.field-meta.xml
<CustomField>
    <fullName>Session_Token__c</fullName>
    <label>Session Token</label>
    <length>100</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>