objects/Portal_Login__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Username__c</columns>
    <columns>Email__c</columns>
    <columns>Account__c</columns>
    <columns>Contact__c</columns>
    <columns>Disabled__c</columns>
    <columns>Expiration_Date__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <columns>Last_Login_Date__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>